--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {
     display: grid;
     margin: 0;
     padding: 0;
-    width: 100vw;
 }
 
+/*For Mobile*/
 #IndexHello {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    min-height: 100vh;
     color: #ffffff;
     top: 0;
     left: 0;
@@ -16,42 +16,28 @@ body {
     display: grid;
 }
 
+#IndexDirectories {
+    width: 100%;
+    height: 100vh;
+    color: #ffffff;
+    display: grid;
+    position: relative;
+    grid-template-rows: calc(100%/3) calc(100%/3) calc(100%/3);
+    padding: 0;
+    margin: 0;
+}
+
 h1 {
-    font-size: 15em;
+    font-size: 8em;
     font-weight: bold;
     text-align: center;
+    margin: 15px;
 }
 
 h2 {
     font-size: 2.5em;
     font-weight: bold;
     text-align: center;
-}
-
-#IndexDirectories {
-    width: 100vw;
-    height: 100vh;
-    color: #ffffff;
-    display: grid;
-    position: relative;
-    grid-template-columns: calc(100vw/3) calc(100vw/3) calc(100vw/3);
-    padding: 0;
-    margin: 0;
-}
-
-.indexHead {
-    font-size: 5vw;
-    padding: 0;
-    margin: 0;
-}
-
-.directory {
-    padding: 0;
-    margin: 0;
-    background-color: rgba(20, 30, 40, 0.5);
-    display: grid;
-    height: 100vh;
-    overflow: hidden;
 }
 
 .directory-text {
@@ -65,11 +51,37 @@ h2 {
 .directory-img {
     position: absolute;
     height: 100%;
-    width: calc(100vw/3);
+    width: 100%;
     z-index: 0;
     display: block;
     opacity: 100%;
     object-fit: cover;
+}
+
+.indexHead {
+    font-size: 5vw;
+    padding: 0;
+    margin: 0;
+}
+
+.directory {
+    padding: 0;
+    margin: 0;
+    background-color: rgba(20, 30, 40, 0.5);
+    display: grid;
+    height: calc(100%/3);
+    overflow: hidden;
+}
+
+/*For Desktop*/
+@media only screen and (min-width: 768px) {
+    h1 {
+        font-size: 15em;
+    }
+
+    #IndexDirectories {
+        grid-template-columns: calc(100%/3) calc(100%/3) calc(100%/3);
+    }
 }
 
 .skew {
