--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 h1 {
-    font-size: 8em;
+    font-size: 7em;
     font-weight: bold;
     text-align: center;
     margin: 15px;
@@ -45,6 +45,8 @@ h2 {
 .directory-text {
     align-self: center;
     text-align: center;
+    position: absolute;
+    width: 100%;
     background-color: rgba(20, 20, 20, 0.0);
     z-index: 1;
     text-shadow: 0px 0px 100px rgba(0,0,0, 1);
@@ -52,31 +54,28 @@ h2 {
 
 .directory-img {
     position: absolute;
-    max-height: calc(100%/3);
+    height: 100%;
     width: 100%;
     z-index: 0;
     display: block;
-    opacity: 100%;
+    opacity: 50%;
     object-fit: cover;
 }
 
 .indexHead {
-    font-size: 5vw;
-    padding: 0;
+    font-size: 3.5em;
+    padding:0px;
     margin: 0;
 }
 
 .directory {
-    padding: 0;
+    position: relative;
     margin: 0;
     background-color: rgba(20, 30, 40, 0.5);
-    display: grid;
-    height: calc(100%/3);
-    overflow: hidden;
 }
 
 /*For Desktop*/
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1300px) {
     h1 {
         font-size: 15em;
     }
