--- a/style.css
+++ b/style.css
@@ -23,10 +23,22 @@ body {
     display: grid;
     position: relative;
     grid-template-rows: calc(100%/3) calc(100%/3) calc(100%/3);
-    grid-row-gap: 0;
-    grid-column-gap: 0;
     padding: 0;
     margin: 0;
+}
+
+#resume {
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+}
+
+#resume > iframe {
+    width: 100%;
+    height: 100%;
+    z-index: 100;
 }
 
 h1 {
@@ -42,6 +54,21 @@ h2 {
     text-align: center;
 }
 
+a {
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.note {
+    color: white;
+    text-align: center;
+    font-size: 2em;
+    text-decoration: bold;
+    width: 100%;
+}
+
 .directory-text {
     align-self: center;
     text-align: center;
@@ -49,7 +76,9 @@ h2 {
     width: 100%;
     background-color: rgba(20, 20, 20, 0.0);
     z-index: 1;
-    text-shadow: 0px 0px 100px rgba(0,0,0, 1);
+    font-size: 3.5em;
+    text-shadow: none;
+    transition: 0.25s;
 }
 
 .directory-img {
@@ -60,18 +89,35 @@ h2 {
     display: block;
     opacity: 50%;
     object-fit: cover;
-}
-
-.indexHead {
-    font-size: 3.5em;
-    padding:0px;
-    margin: 0;
+    transition: 0.25s;
 }
 
 .directory {
     position: relative;
     margin: 0;
     background-color: rgba(20, 30, 40, 0.5);
+    display: grid;
+    border: none;
+    color: inherit;
+}
+
+.directory:hover {
+    cursor: pointer;
+}
+
+.directory:hover > .directory-img {
+    opacity: 100%;
+}
+
+.directory:hover > .directory-text {
+    text-shadow: 0px 0px 50px rgba(0,0,0, 0.9);
+}
+
+/*For Tablet*/
+@media only screen and (min-width: 768px) {
+    .directory-text {
+        font-size: 5rem;
+    }
 }
 
 /*For Desktop*/
@@ -82,12 +128,11 @@ h2 {
 
     #IndexDirectories {
         grid-template-columns: calc(100%/3) calc(100%/3) calc(100%/3);
+        grid-template-rows: none;
     }
 
     .directory-img {
-        max-width: calc(100%/3);
         width: none;
-        max-height: none;
         height: 100%;
     }
 }
